Fix chart list alignment + no charts result

--- a/src/ui/src/app/chart-list/chart-list.component.scss
+++ b/src/ui/src/app/chart-list/chart-list.component.scss
@@ -2,16 +2,20 @@
 @import '../../theme.scss';
 
 .chart-list {
+  flex: 1;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
   margin-top: 1em;
-
+  &__empty {
+    align-self: center;
+    margin: auto;
+    opacity: 0.7;
+  }
   app-chart-item {
     display: block;
     width: 100%;
     margin-bottom: 1em;
-
+    margin-right: 1em;
     @include mappy-bp(small) {
       width: 100%;
     }
