--- a/src/ui/src/app/charts/charts.component.scss
+++ b/src/ui/src/app/charts/charts.component.scss
@@ -40,6 +40,8 @@
       display: flex;
       flex-direction: column;
       app-chart-list {
+        flex: 1;
+        display: flex;
         padding-left: 1em;
       }
       &__topbar {
